# mel-spec

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
doc/: cutsec_46997.tga  jfk_transcript_golden.txt
doc/vad/: README.md
examples/: Cargo.toml  bench_batched.rs
examples/browser/: Makefile  README.md  app.js  audioSender.js  bench_rw.js  index.css  index.html  package-lock.json  package.json  ringbuffer.js  server.js  wav_worker.js  worker.js  worklet.js
examples/browser/test/: ringbuffer.js
examples/mel_tga/: Cargo.toml  README.md
examples/mel_tga/src/: main.rs
examples/src/: main.rs
examples/stream_whisper/: Cargo.toml  README.md
examples/stream_whisper/src/: main.rs
examples/tga_whisper/: Cargo.toml  README.md
examples/tga_whisper/src/: main.rs
examples/vad_ten_eval/: Cargo.toml
examples/vad_ten_eval/src/: main.rs
examples/whisper/: Cargo.toml  README.md
examples/whisper/src/: main.rs
mel_spec/: Cargo.toml  README.md
mel_spec/src/: config.rs  lib.rs  mel.rs  prelude.rs  quant.rs  rb.rs  stft.rs  utils.rs  vad.rs
mel_spec/testdata/: not.tga
mel_spec_audio/: Cargo.toml
mel_spec_audio/src/: lib.rs  packet.rs  types.rs  wasm.rs  wav.rs
mel_spec_pipeline/: Cargo.toml
mel_spec_pipeline/src/: lib.rs  pipeline.rs  prelude.rs  wasm.rs
src/: config.rs  cuda.rs  cuda_kernels.cu  fbank.rs  helpers.rs  lib.rs  mel.rs  pcm.rs  pipeline.rs  prelude.rs  quant.rs  rb.rs  stft.rs  streamer.rs  text.rs  vad.rs  wasm.rs  wgpu.rs  wgpu.wgsl
test/: ask.tga  fellow_americans.tga  quantized_mel.tga  quantized_mel_golden.tga
testdata/: frame_5283.tga  frame_9047.tga  jfk_full_speech_chunk1_golden.tga  kaldi.py  kaldi_native_fbank_jfk.npz  kaldi_native_fbank_jfk_new.npz  nemo_filterbank.py  nemo_mel_filters.npz  rust_jfk.npy
testdata/blank/: frame_21168.tga  frame_23760.tga  frame_39744.tga  frame_41492.tga  frame_41902.tga  frame_63655.tga  frame_7497.tga
testdata/speech/: frame_11648.tga  frame_27125.tga  frame_2889.tga  frame_4694.tga  frame_4901.tga
testdata/ten-vad/: LICENSE.TEN-VAD  NOTICES.TEN-VAD  README.md  testset-audio-01.scv  testset-audio-02.scv  testset-audio-03.scv  testset-audio-04.scv  testset-audio-05.scv  testset-audio-06.scv  testset-audio-07.scv  testset-audio-08.scv  testset-audio-09.scv  testset-audio-10.scv  testset-audio-11.scv  testset-audio-12.scv  testset-audio-13.scv  testset-audio-14.scv  testset-audio-15.scv  testset-audio-16.scv  testset-audio-17.scv  testset-audio-18.scv  testset-audio-19.scv  testset-audio-20.scv  testset-audio-21.scv  testset-audio-22.scv  testset-audio-23.scv  testset-audio-24.scv  testset-audio-25.scv  testset-audio-26.scv  testset-audio-27.scv  testset-audio-28.scv  testset-audio-29.scv  testset-audio-30.scv
tests/: readme_examples.rs  vad_regression.rs
