[workspace]
resolver = "2"
members = ["mel_spec", "mel_spec_pipeline", "mel_spec_audio"]


[workspace.package]
version = "0.2.2"

[workspace.dependencies]
mel_spec = { path = "./mel_spec", version = "0.2.2" }
mel_spec_audio = { path = "./mel_spec_audio", version = "0.2.2" }
crossbeam-channel = "0.5.8"
image = "0.24.6"
js-sys = "0.3.64"
ndarray = "^0.16"
ndarray-npy = "0.9.1"
num = "0.4.1"
rustfft = { version = "6.2.0" }
soundkit = "0.10.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.4" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
