[package]
name = "mel_spec"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Mel spectrograms aligned to the results from the whisper.cpp, pytorch and librosa reference implementations and suited to streaming audio."
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

exclude = ["examples", "pkg", "doc", "testdata/*"]

[dependencies]
image = "0.24.6"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num = "0.4.1"
rustfft = { version = "6.2.0" }
js-sys = { version = "^0.3", optional = true }
wasm-bindgen = { version = "^0.2", optional = true }
web-sys = { version = "^0.3", features = ['Worker'], optional = true }
soundkit = { version = "0.11.0", features = ["wasm"], optional = true }
regex = "1.11.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rtrb = "0.3.2"
realfft = "3.4.0"
num-complex = "0.4.6"


[dev-dependencies]
soundkit = { version = "0.11.0" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["web-sys", "wasm-bindgen", "js-sys"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
