[package]
name = "mel_spec_whisper_example"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wavey-ai/mel_spec"
readme = "README.md"

[dependencies]
image = "0.24.6"
crossbeam-channel = "0.5.8"
mel_spec = { path = "../mel_spec" }
mel_spec_pipeline = { path = "../mel_spec_pipeline"}
mel_spec_audio = { path = "../mel_spec_audio"}

whisper-rs = { path = "../../whisper-rs" }
structopt = "0.3.26"

[[bin]]
name = "mel_spec_example"
path = "src/main.rs"
