[package]
name = "mel_spec"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Mel spectrograms aligned to the results from the whisper.cpp, pytorch and librosa reference implementations and suited to streaming audio."
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[dependencies]
image = "0.24.6"
js-sys = "0.3.64"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
num = "0.4.1"
rustfft = { path = "../../RustFFT", features = ["wasm_simd"] }

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

