[package]
name = "mel_spec"
version = "0.2.7"
edition = "2021"
license = "MIT"
description = "Mel spectrograms aligned to the results from the whisper.cpp, pytorch and librosa reference implementations and suited to streaming audio."
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[dependencies]
image = { workspace = true }
js-sys = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
num = { workspace = true }
rustfft = { workspace = true, features = ["wasm_simd"] }

[dev-dependencies]
soundkit = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
