[package]
name = "mel_spec_audio"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Audio-to-Mel pipeline"
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Worker',
]



