[package]
name = "mel_spec_audio"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Audio-to-Mel pipeline"
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ['Worker']
