[package]
name = "mel_spec_pipeline"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Audio-to-Mel pipeline"
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5.8"
image = "0.24.6"
js-sys = "0.3.64"
mel_spec = { workspace = true }
mel_spec_audio = { workspace = true }
ndarray = "0.15.6"
num = "0.4.1"
rubato = "0.14.1"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'MessageEvent',
    'Worker',
]

[lib]
crate-type = ["cdylib", "rlib"]

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"
