[package]
name = "mel_spec_pipeline"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Audio-to-Mel pipeline"
repository = "https://github.com/wavey-ai/mel-spec"
readme = "README.md"

[dependencies]
crossbeam-channel = { workspace = true }
image = { workspace = true }
js-sys = { workspace = true }
mel_spec = { workspace = true }
mel_spec_audio = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
rubato = { workspace = true }
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ['Worker']

[lib]
crate-type = ["cdylib", "rlib"]

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"
