[package]
name = "stream_whisper"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wavey-ai/mel_spec"
readme = "README.md"

[dependencies]
mel_spec = { path = "../.." }
ndarray = "0.16.1"
whisper-rs = "0.14"
structopt = "0.3.26"

[[bin]]
name = "stream_whisper"
path = "src/main.rs"
