[package]
name = "tga_whisper"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wavey-ai/mel_spec"
readme = "README.md"

[dependencies]
mel_spec = { path = "../.." }
whisper-rs = { git = "https://github.com/wavey-ai/whisper-rs.git" }
structopt = "0.3.26"

[[bin]]
name = "tga_whisper"
path = "src/main.rs"
